[package]
name = "hacapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.5.13", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
cookie = "0.18.1"
reqwest = { version = "0.12.12", features = ["cookies"] }
scraper = "0.22.0"